# magnet-cli

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ecr-push-alpha.yml  ecr-push.yml
src/: main.rs
