[package]
name = "magnet-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.14.7"
solana-program = "1.14.7"
serde = "1.0.127"
serde_json = "1.0.66"
borsh = "0.9.1"
solana-sdk = "1.14.7" 
solana-account-decoder = "1.14.7"
solana-transaction-status = "1.14.7"
anyhow = "1"
clap = { version = "3.1.12", features = ["derive"] }
log = "*"
env_logger = "*"
strsim = "0.10.0"
itertools = "0.10"
rayon = "1.5"
statistical = "1.0"
retry = "1.3.1"
